@@ -1,4 +1,4 @@
 AUX rssowl-unjar-build-fix.patch 1317 RMD160 49c5ec70d4a08f7e1dd66e064e8572c95a68da1a SHA1 1d76a805ff05c1afdf4dbc950b991b32a20a4b93 SHA256 4e1e37683d966ed5b9b0aa451a218630e482e9bf56226a590458d70c05456c3e
 DIST rssowl_1_2_3_src.tar.gz 3392658 RMD160 60bbaf97def6f401e71dff9d7d7673fd1570947b SHA1 f5b2c67b0b41fc1dcb337099ca894599b36bca84 SHA256 2a2cc4ceff06818c101655e936dc2b9757d3d59f1fed48829f289bd46bebb191
-EBUILD rssowl-1.2.3.ebuild 1909 RMD160 2dcd1435834bc41e7ac97ef22816d5205b3231bd SHA1 84b7aa65c77e4084050883cbd0793e075b30a92f SHA256 ecfb4e98bdc0dbf9a891dc07620e434f1204634c149aa031594e8e545c33ea56
-MISC ChangeLog 595 RMD160 61b34fa4af7422db2372df5e066422d6689f965d SHA1 77724bb154bb6e283128f49ab29e303b289f4084 SHA256 f6d1b7c12737855a191554f51c8d54171bda7f113ea3e688614bfa425ce61fb5
+EBUILD rssowl-1.2.3.ebuild 1961 RMD160 d7cc48888689ae7371662bcb5f6a444de838089a SHA1 87895827d9a840e90486626e39d3451cd182f859 SHA256 92867a6126e74fd510c167c051164542e91863b0c5d201cf2bb73134becb2c79
+MISC ChangeLog 724 RMD160 a9c5c87c5b70475e05a553fafbe07b81650fa7d2 SHA1 5da2ac36aa508a7884b8c741f6f9e281c798d6bb SHA256 fd7aeff7d4d0f1030b6cee3c0fdf5efd3e06060f0517ebc58853614083175857
