@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2007; Vlastimil Babka <caster@gentoo.org> rssowl-1.2.3.ebuild:
+  Extend swt built-with-use check also to firefox flag.
+
   25 May 2007; Vlastimil Babka <caster@gentoo.org> rssowl-1.2.3.ebuild:
   Set depend to the swt version that exports MOZILLA_FIVE_HOME and improve the
   built_with_use call.
